Apply spacing correctly in hit-items

--- a/site/src/app/search/HitItem.scss
+++ b/site/src/app/search/HitItem.scss
@@ -22,6 +22,7 @@
 
   .hit-previous-terms {
     display: flex;
+    gap: 8px;
     margin-bottom: 16px;
   }
 
